@@ -1,14 +1,22 @@
 # PainterAppModification
-# Instruction
+######By Jawad Haider
+## Instruction
 13.3 (Painter App Modification) Incorporate the RGBA color chooser you created in the Color Chooser app (Section 13.4 ) into the Painter app (Section 13.3 )
 so that the user can choose any drawing color. Changing a Slider’s value should update the color swatch displayed to the user and set the brushColor instance variable to the current Color.
+## Software Requirements:
+1. Scene Builder installation
+[Official site](https://gluonhq.com/products/scene-builder/) to download Scene Builder.
 
-# ScreenShots
+2. [Official site](https://openjfx.io/) of JavaFX where you can find official documentation as well as download links.
+Step-by-step [instructions] (https://openjfx.io/openjfx-docs/) on how to install and run JavaFX applications.
+
+=> --module-path ${PATH_TO_JAVAFX} --add-modules javafx.controls,javafx.fxml
+
+## ScreenShots
 ![](img/Screenshot%20from%202020-12-22%2005-50-36.png)
 
 ![](img/Screenshot%20from%202020-12-22%2005-50-44.png)
 
 ![](img/Screenshot%20from%202020-12-22%2005-51-03.png)
 
-![]()
 
